# GlacierSDK

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  vcpkg.json
include/: create.h  create.h~  utils.h
src/: main.cpp
src/commands/: CMakeLists.txt  create.cpp  create.cpp~  create.cpp~~
test/: config.toml
test/Windows/: CMakeLists.txt
utils/: AppConfig.cpp  CMakeLists.txt  utils.cpp
